[package]
name = "ru_annoy"
edition = "2018"
version = "0.1.0-dev1"
authors = ["ng8eke"]
license = "MIT"
repository = "https://github.com/ng8eke/fareast"
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""

[features]
cffi = ["libc"]

[dependencies]
memmap = "0.7"
libc = { version = "0.2", optional = true }

[lib]
crate-type = ["lib", "cdylib"]
