[package]
authors = ["ng8eke"]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2018"
license = "MIT"
name = "ru_annoy"
repository = "https://github.com/ng8eke/fareast"
version = "0.1.1"

[features]
cffi = ["libc"]

[dependencies]
libc = {version = "0", optional = true}
memmap2 = "0"

[lib]
crate-type = ["lib", "cdylib"]
