[package]
authors = ["ng8eke"]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2018"
exclude = ["dotnet", "java", "test_gen", ".idea", ".vscode", ".github", "*.yml", "*.iml", ".gitignore"]
license = "MIT"
name = "ru_annoy"
repository = "https://github.com/ng8eke/fareast"
version = "0.1.4"

[features]
cffi = ["libc"]

[dependencies]
# ahash = "0"
hashbrown = "0"
libc = {version = "0", optional = true}
memmap2 = "0"

[lib]
crate-type = ["lib", "cdylib"]
