[package]
authors = ["ng8eke"]
description = """
Java bindings to ru_annoy.
"""
edition = "2018"
license = "MIT"
name = "ru_annoy_jni"
repository = "https://github.com/ng8eke/fareast"
version = "0.1.0"

[features]
default= ["simd"]
simd = ["ru_annoy/simd"] 

[dependencies]
jni = "0"
libc = "0"
ru_annoy = {path = "../"}

[lib]
crate-type = ["cdylib"]
