[package]
authors = ["ng8eke"]
description = """
Java bindings to annoy-rs.
"""
edition = "2018"
license = "MIT"
name = "annoy-rs-jni"
repository = "https://github.com/ng8eke/fareast"
version = "0.1.0"

[features]
default = ["simd"]
simd = ["annoy-rs/simd"]

[dependencies]
annoy-rs = {path = "../"}
jni = "0"
libc = "0"

[lib]
crate-type = ["cdylib"]
